--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external\\SDL_image"]
 	path = external\\SDL_image
 	url = https://github.com/libsdl-org/SDL_image.git
+[submodule "external\\SDL"]
+	path = external\\SDL
+	url = https://github.com/libsdl-org/SDL.git
