--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "external/SDL_mixer"]
 	path = external/SDL_mixer
 	url = https://github.com/libsdl-org/SDL_mixer.git
-[submodule "external\\SDL_image"]
-	path = external\\SDL_image
+[submodule "external/SDL_image"]
+	path = external/SDL_image
 	url = https://github.com/libsdl-org/SDL_image.git
-[submodule "external\\SDL"]
-	path = external\\SDL
+[submodule "external/SDL"]
+	path = external/SDL
 	url = https://github.com/libsdl-org/SDL.git
