--- a/android/SDL2_GradleApp/app/build.gradle.template
+++ b/android/SDL2_GradleApp/app/build.gradle.template
@@ -1,12 +1,12 @@
-apply plugin: 'com.android.model.application'
+apply plugin: 'com.android.model.$(ConfigurationType)'
 
 model {
     android {
-        compileSdkVersion = 27
-        buildToolsVersion = "30.0.3"
+        compileSdkVersion = $(AndroidAPILevelNumber)
+        buildToolsVersion = "$(AndroidBuildToolsVersion)"
 
         defaultConfig.with {
-            applicationId = "com.SDL2_GradleApp"
+            $(ApplicationId)
             minSdkVersion.apiLevel = 16
             targetSdkVersion.apiLevel = 27
         }
@@ -51,5 +51,5 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    
+    $(AarDependencies)
 }
